--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,4 +1,4 @@
-name: Python application
+name: Build Tomcat
 
 on: [push]
 
@@ -8,7 +8,37 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out the code
+    - name: Check out tomcat-users.xml
       uses: actions/checkout@v2
-    - name: Python Syntax Checker
-      uses: cclauss/Find-Python-syntax-errors-action@v0.2.0
+
+    - name: List project files and java version
+      run: |
+          ls -ltr
+          java -version
+
+    - name: Check out Apache Tomcat
+      uses: actions/checkout@v2
+      with:
+        repository: apache/tomcat # Repository name with owner
+        ref: master               # The branch, tag or SHA to checkout
+        path: ./tomcat            # Relative path under $GITHUB_WORKSPACE
+
+    - name: Setup Java 9
+      uses: actions/setup-java@v1
+      with:
+        java-version: '9.0.4'     # The JDK version to make available on the path
+        java-package: jre         # (jre, jdk, or jdk+fx) - defaults to jdk
+        architecture: x64         # (x64 or x86) - defaults to x64
+
+    - name: List project files and java version
+      run: |
+          ls -ltr
+          java -version
+
+    - name: Copy tomcat-users.xml into Tomcat configuration directory
+      run: cp -v tomcat-users.xml ./tomcat/conf/tomcat-users.xml
+
+    - name: Compile Tomcat
+      run: |
+        cd ./tomcat
+        ant
