--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -27,7 +27,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: '9.0.4'     # The JDK version to make available on the path
-        java-package: jre         # (jre, jdk, or jdk+fx) - defaults to jdk
+        java-package: jdk         # (jre, jdk, or jdk+fx) - defaults to jdk
         architecture: x64         # (x64 or x86) - defaults to x64
 
     - name: List project files and java version
