--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,44 +1,41 @@
-name: Build Tomcat
-
+name: Environment Variables
+env:
+  WORKSPACE_ENVIRONMENT_VARIABLE: 'custom workspace environment variable'
 on: [push]
-
 jobs:
-  build:
-
+  ubuntu:
+    env:
+      JOB_ENVIRONMENT_VARIABLE: 'custom job environment variable for ubuntu'
     runs-on: ubuntu-latest
-
     steps:
-    - name: Check out tomcat-users.xml
-      uses: actions/checkout@v2
-
-    - name: List project files and java version
-      run: |
-          ls -ltr
-          java -version
-
-    - name: Check out Apache Tomcat
-      uses: actions/checkout@v2
-      with:
-        repository: apache/tomcat # Repository name with owner
-        ref: main               # The branch, tag or SHA to checkout
-        path: ./tomcat            # Relative path under $GITHUB_WORKSPACE
-
-    - name: Setup Java 9
-      uses: actions/setup-java@v1
-      with:
-        java-version: '17.0.11'     # The JDK version to make available on the path
-        java-package: jdk         # (jre, jdk, or jdk+fx) - defaults to jdk
-        architecture: x64         # (x64 or x86) - defaults to x64
-
-    - name: List project files and java version
-      run: |
-          ls -ltr
-          java -version
-
-    - name: Copy tomcat-users.xml into Tomcat configuration directory
-      run: cp -v tomcat-users.xml ./tomcat/conf/tomcat-users.xml
-
-    - name: Compile Tomcat
-      run: |
-        cd ./tomcat
-        ant
+      - name: Print custom environment variables from ubuntu-latest
+        env:
+          STEP_ENVIRONMENT_VARIABLE: 'custom step environment variable for bash'
+        run: |
+          echo "Accessing environment variables in run command"
+          echo "$WORKSPACE_ENVIRONMENT_VARIABLE"
+          echo "$JOB_ENVIRONMENT_VARIABLE"
+          echo "$STEP_ENVIRONMENT_VARIABLE"
+          echo "------------------------------------------------------"
+          echo "Accessing environment variables using env context"
+          echo "${{ env.WORKSPACE_ENVIRONMENT_VARIABLE }}"
+          echo "${{ env.JOB_ENVIRONMENT_VARIABLE }}"
+          echo "${{ env.STEP_ENVIRONMENT_VARIABLE }} Not defined"
+  windows:
+    env:
+      JOB_ENVIRONMENT_VARIABLE: 'custom job environment variable for windows'
+    runs-on: windows-latest
+    steps:
+      - name: Print custom environment variables from windows-latest
+        env:
+          STEP_ENVIRONMENT_VARIABLE: 'custom step environment variable for powershell'
+        run: |
+          echo "Accessing environment variables in run command"
+          echo "$Env:WORKSPACE_ENVIRONMENT_VARIABLE"
+          echo "$Env:JOB_ENVIRONMENT_VARIABLE"
+          echo "$Env:STEP_ENVIRONMENT_VARIABLE"
+          echo "------------------------------------------------------"
+          echo "Accessing environment variables using env context"
+          echo "${{ env.WORKSPACE_ENVIRONMENT_VARIABLE }}"
+          echo "${{ env.JOB_ENVIRONMENT_VARIABLE }}"
+          echo "${{ env.STEP_ENVIRONMENT_VARIABLE }} Not defined"
