--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,41 +1,18 @@
-name: Environment Variables
-env:
-  WORKSPACE_ENVIRONMENT_VARIABLE: 'custom workspace environment variable'
+name: secrets
+
 on: [push]
+
 jobs:
-  ubuntu:
-    env:
-      JOB_ENVIRONMENT_VARIABLE: 'custom job environment variable for ubuntu'
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
-      - name: Print custom environment variables from ubuntu-latest
-        env:
-          STEP_ENVIRONMENT_VARIABLE: 'custom step environment variable for bash'
-        run: |
-          echo "Accessing environment variables in run command"
-          echo "$WORKSPACE_ENVIRONMENT_VARIABLE"
-          echo "$JOB_ENVIRONMENT_VARIABLE"
-          echo "$STEP_ENVIRONMENT_VARIABLE"
-          echo "------------------------------------------------------"
-          echo "Accessing environment variables using env context"
-          echo "${{ env.WORKSPACE_ENVIRONMENT_VARIABLE }}"
-          echo "${{ env.JOB_ENVIRONMENT_VARIABLE }}"
-          echo "${{ env.STEP_ENVIRONMENT_VARIABLE }} Not defined"
-  windows:
-    env:
-      JOB_ENVIRONMENT_VARIABLE: 'custom job environment variable for windows'
-    runs-on: windows-latest
-    steps:
-      - name: Print custom environment variables from windows-latest
-        env:
-          STEP_ENVIRONMENT_VARIABLE: 'custom step environment variable for powershell'
-        run: |
-          echo "Accessing environment variables in run command"
-          echo "$Env:WORKSPACE_ENVIRONMENT_VARIABLE"
-          echo "$Env:JOB_ENVIRONMENT_VARIABLE"
-          echo "$Env:STEP_ENVIRONMENT_VARIABLE"
-          echo "------------------------------------------------------"
-          echo "Accessing environment variables using env context"
-          echo "${{ env.WORKSPACE_ENVIRONMENT_VARIABLE }}"
-          echo "${{ env.JOB_ENVIRONMENT_VARIABLE }}"
-          echo "${{ env.STEP_ENVIRONMENT_VARIABLE }} Not defined"
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
+    - name: List S3 Buckets
+      run: aws s3api list-buckets
