--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,10 +13,10 @@ jobs:
       uses: actions/setup-python@v1.1.1
     - name: Install requirements
       run: pip install --quiet --requirement requirements.txt
-    - name: Lint code
-      run: |
-        flake8 --ignore=E501,E231 *.py
-        pylint --disable=C0301 *.py
+    # - name: Lint code
+    #   run: |
+    #     flake8 --ignore=E501,E231 *.py
+    #     pylint --disable=C0301 *.py
     - name: Run unit tests
       run: |
         python -m unittest --verbose --failfast
