--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,6 +3,7 @@ name: Pipeline
 on: [push]
 env:
   APPLICATION_NAME: app2
+  ACTIONS_ALLOW_UNSECURE_COMMANDS: true
 jobs:
   lint:
     runs-on: ubuntu-latest
